@@ -112,9 +112,6 @@ Type0Font_attach_ToUnicode_stream (pdf_font *font)
   tounicode = NULL;
   csi       = &cidfont->cid.csi;
   fontname  = cidfont->fontname;
-  if (cidfont->cid.options.embed) {
-    fontname += 7; /* FIXME: Skip pseudo unique tag... */
-  }
 
   switch (cidfont->subtype) {
   case PDF_FONT_FONTTYPE_CIDTYPE2:
@@ -191,13 +188,16 @@ pdf_font_open_type0 (pdf_font *font, int cid_id, int wmode)
    *  Type0 font's fontname is usually descendant CID-keyed font's font name 
    *  appended by -ENCODING.
    */
-  fontname = cidfont->fontname;
+  if (cidfont->cid.options.embed) {
+    fontname = NEW(strlen(cidfont->fontname)+8, char);
+    sprintf(fontname, "%s+%s", cidfont->uniqueID, cidfont->fontname);
+  } else {
+    fontname = NEW(strlen(cidfont->fontname)+1, char);
+    strcpy(fontname, cidfont->fontname);
+  }
 
   if (dpx_conf.verbose_level > 0) {
-    if (cidfont->cid.options.embed && strlen(fontname) > 7)
-      MESG("(CID:%s)", fontname+7); /* skip XXXXXX+ */
-    else
-      MESG("(CID:%s)", fontname);
+    MESG("(CID:%s)", cidfont->fontname);
   }
 
   switch (cidfont->subtype) {
